--- a/openvpn/server/conf/dh-openvpn-server-udp1194.conf
+++ b/openvpn/server/conf/dh-openvpn-server-udp1194.conf
@@ -9,7 +9,7 @@ keepalive 10 60
 tls-server
 tls-version-min 1.2
 remote-cert-tls client
-tls-crypt HMAC-sig.key
+tls-crypt hmac-sig.key
 dh dh.pem
 ca ca.crt
 cert dh-openvpn-server.crt
