--- a/cfn-templates/dh-openvpn-cfn_cw.yaml
+++ b/cfn-templates/dh-openvpn-cfn_cw.yaml
@@ -17,6 +17,17 @@ Metadata: {}
 Parameters:
 #===========================================
 
+#--- The Project Name
+#-------------------------------------------
+  ProjectName:
+    Description: Name of this Openvpn project.
+    ConstraintDescription: Specify name of the project.
+    Type: String
+    Default: "dh-openvpn"
+    MinLength: 3
+    MaxLength: 63
+    AllowedPattern: (?!^(\d{1,3}\.){3}\d{1,3}$)(^[a-z0-9]([a-z0-9-]*(\.[a-z0-9])?)*$(?<!\-))
+
 #--- SNS Topic ARN
 #-------------------------------------------
   OpenvpnSNSTopicARN:
@@ -48,7 +59,7 @@ Resources:
 #.............................
     Properties:
 #.............................
-      AlarmName: !Sub "openvpn-OutOfService-${AWS::Region}"
+      AlarmName: !Sub "${ProjectName}-OutOfService"
       AlarmDescription: "Openvpn Cloudwatch Alarm: Out of Service"
 #.............................
       ActionsEnabled: true
@@ -80,7 +91,7 @@ Resources:
 #.............................
     Properties:
 #.............................
-      AlarmName: !Sub "openvpn-InService-${AWS::Region}"
+      AlarmName: !Sub "${ProjectName}-InService"
       AlarmDescription: "Openvpn Cloudwatch Alarm: In Service"
 #.............................
       ActionsEnabled: true
