--- a/cfn-templates/dh-openvpn-cfn_ec2-asg.yaml
+++ b/cfn-templates/dh-openvpn-cfn_ec2-asg.yaml
@@ -16,6 +16,17 @@ Metadata: {}
 Parameters:
 #===========================================
 
+#--- The Project Name
+#-------------------------------------------
+  ProjectName:
+    Description: Name of this Openvpn project.
+    ConstraintDescription: Specify name of the project.
+    Type: String
+    Default: "dh-openvpn"
+    MinLength: 3
+    MaxLength: 63
+    AllowedPattern: (?!^(\d{1,3}\.){3}\d{1,3}$)(^[a-z0-9]([a-z0-9-]*(\.[a-z0-9])?)*$(?<!\-))
+
 #--- Public Subnet IDs
 #-------------------------------------------
   PublicSubnetIdA:
@@ -63,7 +74,7 @@ Resources:
     Description: "This is the launch template description"
 #.............................
     Properties:
-      AutoScalingGroupName: "openvpn-autoscaling-group"
+      AutoScalingGroupName: !Sub "${ProjectName}-autoscale-group"
 #.............................
       LaunchTemplate: 
         LaunchTemplateId: !Ref LaunchTemplateIdASG
@@ -74,7 +85,7 @@ Resources:
       Tags:
         - 
           Key: "Name"
-          Value: "openvpn-autoscale-grp"
+          Value: !Sub "${ProjectName}-autoscale-grp"
           PropagateAtLaunch: true
 #.............................
       VPCZoneIdentifier:
