--- a/cfn-templates/dh-openvpn-cfn_ec2-nlb.yaml
+++ b/cfn-templates/dh-openvpn-cfn_ec2-nlb.yaml
@@ -16,6 +16,17 @@ Metadata: {}
 Parameters:
 #===========================================
 
+#--- The Project Name
+#-------------------------------------------
+  ProjectName:
+    Description: Name of this Openvpn project.
+    ConstraintDescription: Specify name of the project.
+    Type: String
+    Default: "dh-openvpn"
+    MinLength: 3
+    MaxLength: 63
+    AllowedPattern: (?!^(\d{1,3}\.){3}\d{1,3}$)(^[a-z0-9]([a-z0-9-]*(\.[a-z0-9])?)*$(?<!\-))
+
 #-------------------------------------------
 #--- AWS-Specific Parameter Type
 #-------------------------------------------
@@ -56,7 +67,7 @@ Resources:
 #.............................
     Properties:
 #.............................
-      Name: !Sub "ovpn-nlb-${AWS::Region}"
+      Name: !Sub "${ProjectName}-nlb"
 #.............................
       Tags:
         - 
