--- a/cfn-templates/dh-openvpn-cfn_ec2-tg.yaml
+++ b/cfn-templates/dh-openvpn-cfn_ec2-tg.yaml
@@ -13,8 +13,20 @@ Description: >
 Metadata: {}
 
 
+#Parameters: {}
 Parameters:
 #===========================================
+
+#--- The Project Name
+#-------------------------------------------
+  ProjectName:
+    Description: Name of this Openvpn project.
+    ConstraintDescription: Specify name of the project.
+    Type: String
+    Default: "dh-openvpn"
+    MinLength: 3
+    MaxLength: 63
+    AllowedPattern: (?!^(\d{1,3}\.){3}\d{1,3}$)(^[a-z0-9]([a-z0-9-]*(\.[a-z0-9])?)*$(?<!\-))
 
 #-------------------------------------------
 #--- AWS-Specific Parameter Type
@@ -44,7 +56,7 @@ Resources:
 #.............................
     Properties:
 #.............................
-      Name: !Sub "ovpn-tgrp-${AWS::Region}"
+      Name: !Sub "${ProjectName}-target-group"
 #.............................
       HealthCheckEnabled: true
       HealthCheckIntervalSeconds: 30
