--- a/cfn-templates/dh-openvpn-cfn_r53.yaml
+++ b/cfn-templates/dh-openvpn-cfn_r53.yaml
@@ -13,8 +13,20 @@ Description: >
 Metadata: {}
 
 
+#Parameters: {}
 Parameters:
 #===========================================
+
+#--- The Project Name
+#-------------------------------------------
+  ProjectName:
+    Description: Name of this Openvpn project.
+    ConstraintDescription: Specify name of the project.
+    Type: String
+    Default: "dh-openvpn"
+    MinLength: 3
+    MaxLength: 63
+    AllowedPattern: (?!^(\d{1,3}\.){3}\d{1,3}$)(^[a-z0-9]([a-z0-9-]*(\.[a-z0-9])?)*$(?<!\-))
 
 #-------------------------------------------
 #--- Route53 Particulars
@@ -59,7 +71,7 @@ Resources:
 #.............................
     Properties:
 #.............................
-      Name: !Sub "vpn.${OpenvpnDomainName}"
+      Name: !Sub "${ProjectName}.${OpenvpnDomainName}"
       Comment: "Openvpn Route53 Record Set"
 #.............................
       Type: "A"
