--- a/cfn-templates/dh-openvpn-cfn_sns.yaml
+++ b/cfn-templates/dh-openvpn-cfn_sns.yaml
@@ -17,6 +17,17 @@ Metadata: {}
 Parameters:
 #===========================================
 
+#--- The Project Name
+#-------------------------------------------
+  ProjectName:
+    Description: Name of this Openvpn project.
+    ConstraintDescription: Specify name of the project.
+    Type: String
+    Default: "dh-openvpn"
+    MinLength: 3
+    MaxLength: 63
+    AllowedPattern: (?!^(\d{1,3}\.){3}\d{1,3}$)(^[a-z0-9]([a-z0-9-]*(\.[a-z0-9])?)*$(?<!\-))
+
 #-------------------------------------------
   OpenvpnSubsEmailSNS:
     Description: Openvpn SNS Email Endpoint
@@ -43,7 +54,7 @@ Resources:
 #.............................
     Properties:
       DisplayName: "OpenvpnNotice"
-      TopicName: !Sub "ovpn-activity-notice-${AWS::Region}"
+      TopicName: !Sub "${ProjectName}-activity-notice-${AWS::Region}"
 #.............................
       Tags: 
       - 
