--- a/cfn-templates/dh-openvpn-cfn_vpc-nacl.yaml
+++ b/cfn-templates/dh-openvpn-cfn_vpc-nacl.yaml
@@ -357,6 +357,62 @@ Resources:
         From: 53
         To: 53
 #-------------------------------------------
+  PublicNAclEgress55:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      NetworkAclId:
+        Ref: PublicNAcl
+      Egress: 'true'
+      RuleNumber: 55
+      Protocol: 17
+      RuleAction: allow
+      CidrBlock: 0.0.0.0/0
+      PortRange:
+        From: 123
+        To: 123
+#-------------------------------------------
+  PublicNAclEgress56:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      NetworkAclId:
+        Ref: PublicNAcl
+      Egress: 'true'
+      RuleNumber: 56
+      Protocol: 6
+      RuleAction: allow
+      CidrBlock: 0.0.0.0/0
+      PortRange:
+        From: 5228
+        To: 5228
+#-------------------------------------------
+  PublicNAclEgress57:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      NetworkAclId:
+        Ref: PublicNAcl
+      Egress: 'true'
+      RuleNumber: 57
+      Protocol: 6
+      RuleAction: allow
+      CidrBlock: 0.0.0.0/0
+      PortRange:
+        From: 5094
+        To: 5094
+#-------------------------------------------
+  PublicNAclEgress58:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      NetworkAclId:
+        Ref: PublicNAcl
+      Egress: 'true'
+      RuleNumber: 58
+      Protocol: 6
+      RuleAction: allow
+      CidrBlock: 0.0.0.0/0
+      PortRange:
+        From: 5222
+        To: 5222
+#-------------------------------------------
   PublicNAclEgress60:
     Type: AWS::EC2::NetworkAclEntry
     Properties:
