Included input capture routine for PKI Cert Auth Private Key Passphrase that is added to an encrypted aws parameter store. Cleaned up script output feedback response plus more error checking.

--- a/cfn-templates/dh-openvpn-cfn_ec2-priv.yaml
+++ b/cfn-templates/dh-openvpn-cfn_ec2-priv.yaml
@@ -407,7 +407,7 @@ Resources:
               command: "touch pki-cert-auth.txt && chmod 600 $_"
             2b_buildCA:
               cwd: "/usr/local/easy-rsa"
-              command: 'aws ssm get-parameters --names /dh-openvpn-server/pki-cert-auth --with-decryption --query "Parameters[].Value" --output text > pki-cert-auth.txt; echo $_ >> pki-cert-auth.txt'
+              command: !Sub 'aws ssm get-parameters --names "/${ProjectName}/pki-cert-auth" --with-decryption --query "Parameters[].Value" --output text > pki-cert-auth.txt; echo $_ >> pki-cert-auth.txt'
             2y_buildCA:
               cwd: "/usr/local/easy-rsa"
               command: "./easyrsa --passin=file:pki-cert-auth.txt --passout=file:pki-cert-auth.txt build-ca"
