cli script now creates a least-privilege EC2 Instance Profile with inline embedded role-policy documents for S3 access and SSM parameter store. Could not create Instance Profile within Cloudformation templates because the Role userid is tied to the S3 Bucket Access Policy for heightened security.

--- a/cfn-templates/dh-openvpn-cfn.yaml
+++ b/cfn-templates/dh-openvpn-cfn.yaml
@@ -210,7 +210,8 @@ Resources:
   InstancePubDef:
     Type: AWS::CloudFormation::Stack
     Condition: CreateResourcesStage2
-    DependsOn: VPCDef
+    DependsOn: 
+      - VPCDef
     Properties:
 #,,,,,,,,,,,,,,,,
       TemplateURL:
@@ -237,7 +238,8 @@ Resources:
   InstancePrivDef:
     Type: AWS::CloudFormation::Stack
     Condition: CreateResourcesStage2
-    DependsOn: InstancePubDef
+    DependsOn: 
+      - InstancePubDef
     Properties:
 #,,,,,,,,,,,,,,,,
       TemplateURL:
