--- a/cfn-templates/dh-openvpn-cfn_ec2-priv.yaml
+++ b/cfn-templates/dh-openvpn-cfn_ec2-priv.yaml
@@ -85,7 +85,8 @@ Resources:
               Ref: 'AWS::Region'
 #.............................
       DisableApiTermination: false
-      IamInstanceProfile: "dh-openvpn-server-system-administrator"
+#      IamInstanceProfile: "dh-openvpn-server-restrictive"
+      IamInstanceProfile: !Sub "${ProjectName}-instance-profile-${AWS::Region}"
       ImageId: !Ref PrivateAmiId
       InstanceType: "t2.nano"
       KeyName: !Sub "dh.ec2.ssh.admin.console_${AWS::Region}"
@@ -137,7 +138,8 @@ Resources:
           type: "S3"
           buckets: 
             - !Ref ProjectName
-          roleName: "dh-openvpn-server-system-administrator"
+#          roleName: "dh-openvpn-server-restrictive"
+          roleName: !Sub "${ProjectName}-iam-role-${AWS::Region}"
 #,,,,,,,,,,,,,,
       AWS::CloudFormation::Init:
         configSets:
@@ -420,15 +422,16 @@ Resources:
             4a_signReqs:
               cwd: "/usr/local/easy-rsa"
               command: "for REQUEST in /usr/local/easy-rsa/pki/reqs/*; do EntityName=$(basename $REQUEST .req); ./easyrsa --passin=file:pki-cert-auth.txt sign-req ${EntityName##*-} $EntityName; done"
-            4b_signReqs_1:
+            4b_signReqs:
+              cwd: "/usr/local/easy-rsa"
+              command: "rm -f pki-cert-auth.txt"
+            4c_signReqs:
               cwd: "/usr/local/easy-rsa/pki/issued"
               command: 
-#                !Sub "tar -czf - ca.crt *server.crt | aws s3 cp - s3://${ProjectName}/easy-rsa/issued-certs/dh-openvpn-easyrsa-issued-certs-server.tar.gz"
                 !Sub "tar -czf - ca.crt *server.crt | aws s3 cp - s3://${ProjectName}/openvpn/server/crt/dh-openvpn-server-crt.tar.gz"
-            4b_signReqs_2:
+            4d_signReqs:
               cwd: "/usr/local/easy-rsa/pki/issued"
               command: 
-#                !Sub "tar -czf - ca.crt *client.crt | aws s3 cp - s3://${ProjectName}/easy-rsa/issued-certs/dh-openvpn-easyrsa-issued-certs-client.tar.gz"
                 !Sub "tar -czf - ca.crt *client.crt | aws s3 cp - s3://${ProjectName}/openvpn/client/crt/dh-openvpn-client-crt.tar.gz"
 
 
