--- a/cfn-templates/dh-openvpn-cfn_vpc.yaml
+++ b/cfn-templates/dh-openvpn-cfn_vpc.yaml
@@ -35,12 +35,15 @@ Parameters:
   BuildStep: 
     Description: Specify the Stage of the Build.
     Type: String
+    Default: "Stage1"
+
 
 
 #Conditions: {}
 Conditions:
 #===========================================
   CreateResourcesStage1: !Equals [ !Ref BuildStep, Stage1]
+  CreateResourcesStage2: !Equals [ !Ref BuildStep, Stage2]
 
 
 Resources:
@@ -214,7 +217,7 @@ Resources:
 #-------------------------------------------
   RouteTablePrivateARoute0:
     Type: 'AWS::EC2::Route'
-    Condition: CreateResourcesStage1
+    Condition: CreateResourcesStage2
     Properties:
       DestinationCidrBlock: 0.0.0.0/0
       RouteTableId:
@@ -245,7 +248,7 @@ Resources:
 #-------------------------------------------
   RouteTablePrivateBRoute0:
     Type: 'AWS::EC2::Route'
-    Condition: CreateResourcesStage1
+    Condition: CreateResourcesStage2
     Properties:
       DestinationCidrBlock: 0.0.0.0/0
       RouteTableId:
@@ -280,13 +283,13 @@ Resources:
 #-------------------------------------------
   NatGw1ElasticIP:
     Type: 'AWS::EC2::EIP'
-    Condition: CreateResourcesStage1
+    Condition: CreateResourcesStage2
     Properties:
       Domain: vpc
 #-------------------------------------------
   NatGw1:
     Type: 'AWS::EC2::NatGateway'
-    Condition: CreateResourcesStage1
+    Condition: CreateResourcesStage2
     Properties:
       SubnetId:
         Ref: PublicSubnetA
