--- a/cfn-templates/dh-openvpn-cfn_cw.yaml
+++ b/cfn-templates/dh-openvpn-cfn_cw.yaml
@@ -1,138 +1,132 @@
+---
 AWSTemplateFormatVersion: '2010-09-09'
 Description: >
   Cloudwatch Notices for OpenVPN Implementation.
-  A Nested Stack that comprises: 
+  A Nested Stack that comprises:
   Bla Bla.
   Inputs include:
   Bla Bla.
   Outputs include:
   Bla Bla.
-#-------------------------------------------
+# ------------------------------------------
 
 
+# ==========================================
 Metadata: {}
+# Metadata:
 
 
-#Parameters: {}
+# ==========================================
+# Parameters {}
 Parameters:
-#===========================================
 
-#--- The Project Name
-#-------------------------------------------
+  # ------------------------------------------
+  # --- The Project Name
   ProjectName:
-    Description: Name of this Openvpn project.
-    ConstraintDescription: Specify name of the project.
+    Description: "Name of this Openvpn project"
+    ConstraintDescription: "Specify name of the project"
     Type: String
     Default: "dh-openvpn"
     MinLength: 3
     MaxLength: 63
-    AllowedPattern: (?!^(\d{1,3}\.){3}\d{1,3}$)(^[a-z0-9]([a-z0-9-]*(\.[a-z0-9])?)*$(?<!\-))
+    AllowedPattern:
+      (?!^(\d{1,3}\.){3}\d{1,3}$)(^[a-z0-9]([a-z0-9-]*(\.[a-z0-9])?)*$(?<!\-))
 
-#--- SNS Topic ARN
-#-------------------------------------------
+  # ------------------------------------------
+  # --- SNS Topic ARN
   OpenvpnSNSTopicARN:
     Description: "Openvpn SNS Activity Topic ARN"
     Type: String
-#-------------------------------------------
-#  OpenvpnAutoScaleGroupName:
-#    Description: AutoScaling Group Name
-#    Type: String
-#-------------------------------------------
 
 
+# ==========================================
 Conditions: {}
+# Conditions:
 
 
+# ==========================================
 Resources:
-#===========================================
+
+  # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+  #       CLOUDWATCH NOTIFICATIONS
+  # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-# CLOUDWATCH NOTIFICATIONS
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-
-#--- CloudWatch Alarm Out of Service Definition
-#-------------------------------------------
+  # ------------------------------------------
+  # --- CloudWatch Alarm Out of Service Definition
   OpenvpnOutOfServiceAlarm:
     Type: "AWS::CloudWatch::Alarm"
-#.............................
+    # .............................
     Properties:
-#.............................
+      # .............................
       AlarmName: !Sub "${ProjectName}-OutOfService"
       AlarmDescription: "Openvpn Cloudwatch Alarm: Out of Service"
-#.............................
+      # .............................
       ActionsEnabled: true
       AlarmActions:
         - !Ref OpenvpnSNSTopicARN
-#.............................
+      # .............................
       Namespace: "AWS/AutoScaling"
       MetricName: "GroupInServiceInstances"
       Statistic: "Maximum"
-#.............................
+      # .............................
       TreatMissingData: "missing"
       ComparisonOperator: "LessThanThreshold"
-#      DatapointsToAlarm: 5
+      # .............................
       EvaluationPeriods: 5
       Threshold: 1
       Period: 60
-#.............................
-      Dimensions: 
-      - 
-        Name: "AutoScalingGroupName"
-        Value: "openvpn-autoscaling-group"
-#,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+      # .............................
+      Dimensions:
+        -
+          Name: "AutoScalingGroupName"
+          Value: "openvpn-autoscaling-group"
 
-
-#--- CloudWatch Alarm In Service Definition
-#-------------------------------------------
+  # ------------------------------------------
+  # --- CloudWatch Alarm In Service Definition
   OpenvpnInServiceAlarm:
     Type: "AWS::CloudWatch::Alarm"
-#.............................
+    # .............................
     Properties:
-#.............................
+      # .............................
       AlarmName: !Sub "${ProjectName}-InService"
       AlarmDescription: "Openvpn Cloudwatch Alarm: In Service"
-#.............................
+      # .............................
       ActionsEnabled: true
       AlarmActions:
         - !Ref OpenvpnSNSTopicARN
-#.............................
+      # .............................
       Namespace: "AWS/AutoScaling"
       MetricName: "GroupInServiceInstances"
       Statistic: "Minimum"
-#.............................
+      # .............................
       TreatMissingData: "missing"
       ComparisonOperator: "GreaterThanThreshold"
-#      DatapointsToAlarm: 3
+      # .............................
       EvaluationPeriods: 3
       Threshold: 0
       Period: 60
-#.............................
-      Dimensions: 
-      - 
-        Name: "AutoScalingGroupName"
-        Value: "openvpn-autoscaling-group"
-#,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+      # .............................
+      Dimensions:
+        -
+          Name: "AutoScalingGroupName"
+          Value: "openvpn-autoscaling-group"
 
 
-#-------------------------------------------
-
+# ==========================================
 Outputs: {}
-#Outputs:
-#===========================================
+# Outputs:
 
-
-#--- Cloudwatch Dimension values
-#-------------------------------------------
+# --- Cloudwatch Dimension values
+# ------------------------------------------
 #  LoadBalanerValue:
 #    Description: Launch Template ID
 #    Value: !Select [5, !Split [":", !Ref OpenvpnLoadBalancerARN]]
 #    Value: !Select [3, !Split ["/", !Select [5, !Split [":", !Ref OpenvpnLoadBalancerARN]]]]
 #    Value: !Select [3, !Split ["/", !Ref OpenvpnLoadBalancerARN]]
 #    Value: !Join ["/", ["net", !Ref OpenvpnLoadBalancerName, !Select [3, !Split ["/", !Ref OpenvpnLoadBalancerARN]]]]
-#-------------------------------------------
+# ------------------------------------------
 #  TargetGroupValue:
 #    Description: Launch Template ID
 #    Value: !Select [5, !Split [":", !Ref OpenvpnTargetGroupARN]]
-#-------------------------------------------
+# ------------------------------------------
