--- a/cfn-templates/dh-openvpn-cfn_ec2-asg.yaml
+++ b/cfn-templates/dh-openvpn-cfn_ec2-asg.yaml
@@ -1,143 +1,123 @@
+---
 AWSTemplateFormatVersion: '2010-09-09'
 Description: >
   Auto Scale Group EC2 Server for OpenVPN Implementation.
-  A Nested Stack that comprises: 
+  A Nested Stack that comprises:
   Bla Bla.
   Inputs include:
   Bla Bla.
   Outputs include:
   Bla Bla.
-#-------------------------------------------
+# ------------------------------------------
 
 
+# ==========================================
 Metadata: {}
+# Metadata:
 
 
+# ==========================================
+# Parameters {}
 Parameters:
-#===========================================
 
-#--- The Project Name
-#-------------------------------------------
+  # ------------------------------------------
+  # --- The Project Name
   ProjectName:
-    Description: Name of this Openvpn project.
-    ConstraintDescription: Specify name of the project.
+    Description: "Name of this Openvpn project"
+    ConstraintDescription: "Specify name of the project"
     Type: String
     Default: "dh-openvpn"
     MinLength: 3
     MaxLength: 63
-    AllowedPattern: (?!^(\d{1,3}\.){3}\d{1,3}$)(^[a-z0-9]([a-z0-9-]*(\.[a-z0-9])?)*$(?<!\-))
+    AllowedPattern:
+      (?!^(\d{1,3}\.){3}\d{1,3}$)(^[a-z0-9]([a-z0-9-]*(\.[a-z0-9])?)*$(?<!\-))
 
-#--- Public Subnet IDs
-#-------------------------------------------
+  # ------------------------------------------
+  # --- Public Subnet IDs
   PublicSubnetIdA:
-    Description: Public Subnet ID AZ-A
-    Type: AWS::EC2::Subnet::Id
-#-------------------------------------------
+    Description: "Public Subnet ID AZ-A"
+    Type: "AWS::EC2::Subnet::Id"
+  # .............................
   PublicSubnetIdB:
-    Description: Public Subnet ID AZ-B
-    Type: AWS::EC2::Subnet::Id
-#-------------------------------------------
+    Description: "Public Subnet ID AZ-B"
+    Type: "AWS::EC2::Subnet::Id"
+
+  # ------------------------------------------
   LaunchTemplateIdASG:
-    Description: Launch Template Id AutoScalingGroup
+    Description: "Launch Template Id AutoScalingGroup"
     Type: String
-#-------------------------------------------
-#  LaunchTemplateVersion:
-#    Description: Launch Template Version Number
-#    Type: String
-#-------------------------------------------
+  # ------------------------------------------
   TargetGroupArnNLB:
-    Description: Network Loadbalancer Target Group ARN
+    Description: "Network Loadbalancer Target Group ARN"
     Type: String
-#-------------------------------------------
+  # ------------------------------------------
   OpenvpnSNSTopicARN:
     Description: "Openvpn SNS Activity Topic ARN"
     Type: String
-#-------------------------------------------
 
 
+# ==========================================
 Conditions: {}
+# Conditions:
 
 
+# ==========================================
 Resources:
-#===========================================
+
+  # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+  #       AUTO SCALE GROUP DEFINITION
+  # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-# AUTO SCALE GROUP EC2 DEFINITION
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-
-#--- Auto Scale Group 
-#-------------------------------------------
+  # ------------------------------------------
+  # --- Auto Scale Group
   OpenvpnEC2AutoScaleGrp:
     Type: "AWS::AutoScaling::AutoScalingGroup"
-    Description: "This is the launch template description"
-#.............................
+    # .............................
     Properties:
+      # .............................
       AutoScalingGroupName: !Sub "${ProjectName}-autoscale-group"
-#.............................
-      LaunchTemplate: 
+      LaunchTemplate:
         LaunchTemplateId: !Ref LaunchTemplateIdASG
-        Version: 1
-#        Version: !Ref LaunchTemplateVersion
-#        LaunchTemplateName: "openvpn-launch-template"
-#.............................
+        Version: "1"
+      # .............................
       Tags:
-        - 
+        -
           Key: "Name"
           Value: !Sub "${ProjectName}-autoscale-grp"
           PropagateAtLaunch: true
-#.............................
+      # .............................
       VPCZoneIdentifier:
         - !Ref PublicSubnetIdA
         - !Ref PublicSubnetIdB
-#.............................
-      Cooldown: 210
-      DesiredCapacity: 1
-      MinSize: 1
-      MaxSize: 1
-#.............................
+      # .............................
+      Cooldown: "210"
+      DesiredCapacity: "1"
+      MinSize: "1"
+      MaxSize: "1"
+      # .............................
       HealthCheckType: "ELB"
       HealthCheckGracePeriod: 180
-#.............................
+      # .............................
       TargetGroupARNs:
         - !Ref TargetGroupArnNLB
-#.............................
-      MetricsCollection: 
+      # .............................
+      MetricsCollection:
         - Granularity: "1Minute"
-          Metrics: 
+          Metrics:
             - "GroupInServiceInstances"
             - "GroupTotalInstances"
-#.............................
+      # .............................
       NotificationConfigurations:
         - NotificationTypes:
-          - autoscaling:EC2_INSTANCE_LAUNCH
-          - autoscaling:EC2_INSTANCE_LAUNCH_ERROR
-          - autoscaling:EC2_INSTANCE_TERMINATE
-          - autoscaling:EC2_INSTANCE_TERMINATE_ERROR
-          - autoscaling:TEST_NOTIFICATION
+            - autoscaling:EC2_INSTANCE_LAUNCH
+            - autoscaling:EC2_INSTANCE_LAUNCH_ERROR
+            - autoscaling:EC2_INSTANCE_TERMINATE
+            - autoscaling:EC2_INSTANCE_TERMINATE_ERROR
+            - autoscaling:TEST_NOTIFICATION
           TopicARN: !Ref OpenvpnSNSTopicARN
-#.............................
-#      TerminationPolicies: 
-#        - "Default"
-#      ServiceLinkedRoleARN: !Sub "arn:aws:iam::${AWS::AccountId}:role/aws-service-role/autoscaling.amazonaws.com/AWSServiceRoleForAutoScaling"
-#.............................
-#      MaxInstanceLifetime: 604800
-#,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 
 
-#-------------------------------------------
-
-
-
+# ==========================================
 Outputs: {}
-#Outputs:
-#===========================================
-
-
-#--- Public Instance ID
-#-------------------------------------------
-#  OpenvpnAutoScaleGroupName:
-#    Description: AutoScaling Group Name
-#    Value: !GetAtt OpenvpnEC2AutoScaleGrp.TargetGroupName
-#-------------------------------------------
+# Outputs:
