--- a/cfn-templates/dh-openvpn-cfn_ec2-lt.yaml
+++ b/cfn-templates/dh-openvpn-cfn_ec2-lt.yaml
@@ -1,68 +1,71 @@
+---
 AWSTemplateFormatVersion: '2010-09-09'
 Description: >
   Launch Template EC2 Server for OpenVPN Implementation.
-  A Nested Stack that comprises: 
+  A Nested Stack that comprises:
   Bla Bla.
   Inputs include:
   Bla Bla.
   Outputs include:
   Bla Bla.
-#-------------------------------------------
+# ------------------------------------------
 
 
+# ==========================================
 Metadata: {}
+# Metadata:
 
 
+# ==========================================
+# Parameters {}
 Parameters:
-#===========================================
 
-#--- The Project Name
-#-------------------------------------------
+  # ------------------------------------------
+  # --- The Project Name
   ProjectName:
-    Description: Name of this Openvpn project.
-    ConstraintDescription: Specify name of the project.
+    Description: "Name of this Openvpn project"
+    ConstraintDescription: "Specify name of the project"
     Type: String
     Default: "dh-openvpn"
     MinLength: 3
     MaxLength: 63
-    AllowedPattern: (?!^(\d{1,3}\.){3}\d{1,3}$)(^[a-z0-9]([a-z0-9-]*(\.[a-z0-9])?)*$(?<!\-))
+    AllowedPattern:
+      (?!^(\d{1,3}\.){3}\d{1,3}$)(^[a-z0-9]([a-z0-9-]*(\.[a-z0-9])?)*$(?<!\-))
 
-#--- AMI for EC2 instance
-#-------------------------------------------
+  # ------------------------------------------
+  # --- Pre-Configured Public EC2 instance
   PublicLtAmiId:
-    Description: Launc Template Public AMI ID 
-    Type: AWS::EC2::Image::Id
-#-------------------------------------------
+    Description: "Launch Template Public AMI ID"
+    Type: "AWS::EC2::Image::Id"
 
-#--- Public Security Group Resource ID
-#-------------------------------------------
+  # ------------------------------------------
+  # --- Public Security Group Resource ID
   PublicSgResourceId:
-    Description: Public Security Group ID AZ-A
-    Type: AWS::EC2::SecurityGroup::Id
-#-------------------------------------------
+    Description: "Public Security Group ID AZ-A"
+    Type: "AWS::EC2::SecurityGroup::Id"
 
 
+# ==========================================
 Conditions: {}
+# Conditions:
 
 
+# ==========================================
 Resources:
-#===========================================
+
+  # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+  #       LAUNCH TEMPLATE EC2 DEFINITION
+  # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-# LAUNCH TEMPLATE EC2 DEFINITION
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-
-#--- Public EC2 Launch Template
-#-------------------------------------------
+  # ------------------------------------------
+  # --- Public EC2 Instance
   PublicEC2LaunchTemplate:
     Type: "AWS::EC2::LaunchTemplate"
-    Description: "Openvpn Launch Template for AutoScaling"
-#.............................
+    # .............................
     Properties:
+      # .............................
       LaunchTemplateName: !Sub "${ProjectName}-launch-template"
-#.............................
       LaunchTemplateData:
         ImageId: !Ref PublicLtAmiId
         InstanceType: "t2.nano"
@@ -71,13 +74,12 @@ Resources:
           Enabled: false
         SecurityGroupIds:
           - !Ref PublicSgResourceId
-#.............................
-        IamInstanceProfile: 
-#          Name: "dh-openvpn-server-restrictive"
+        # .............................
+        IamInstanceProfile:
           Name: !Sub "${ProjectName}-instance-profile-${AWS::Region}"
-#.............................
+        # .............................
         UserData:
-          Fn::Base64: 
+          Fn::Base64:
             !Sub |
               #!/bin/bash -x
               # https://github.com/aws/aws-cli/issues/1588 bug with --exclude below
@@ -94,30 +96,22 @@ Resources:
               # Health Checks facilitated by httpd Port 80
               systemctl enable httpd
               systemctl start httpd
-#.............................
+        # .............................
         TagSpecifications:
           -
             ResourceType: "instance"
             Tags:
               -
                 Key: "Name"
-                Value: "openvpn-autoscaled"
-#,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+                Value: !Sub "${ProjectName}-autoscaled"
 
 
-#-------------------------------------------
-
-
-
-#Outputs: {}
+# ==========================================
+# Outputs: {}
 Outputs:
-#===========================================
 
-
-#--- Public Instance ID
-#-------------------------------------------
+  # ------------------------------------------
+  # --- Public Instance ID
   LaunchTemplateId:
-    Description: Launch Template ID
-    Value:
-      Ref: PublicEC2LaunchTemplate
-#-------------------------------------------
+    Description: "Launch Template ID"
+    Value: !Ref PublicEC2LaunchTemplate
