--- a/cfn-templates/dh-openvpn-cfn_ec2-priv.yaml
+++ b/cfn-templates/dh-openvpn-cfn_ec2-priv.yaml
@@ -1,146 +1,143 @@
+---
 AWSTemplateFormatVersion: '2010-09-09'
 Description: >
   Launch Template EC2 Server for OpenVPN Implementation.
-  A Nested Stack that comprises: 
+  A Nested Stack that comprises:
   Bla Bla.
   Inputs include:
   Bla Bla.
   Outputs include:
   Bla Bla.
-#-------------------------------------------
+# ------------------------------------------
 
 
+# ==========================================
 Metadata: {}
+# Metadata:
 
 
+# ==========================================
+# Parameters {}
 Parameters:
-#===========================================
 
-#--- The Project Name
-#-------------------------------------------
+  # ------------------------------------------
+  # --- The Project Name
   ProjectName:
-    Description: Name of this Openvpn project.
-    ConstraintDescription: Specify name of the project.
+    Description: "Name of this Openvpn project"
+    ConstraintDescription: "Specify name of the project"
     Type: String
     Default: "dh-openvpn"
     MinLength: 3
     MaxLength: 63
-    AllowedPattern: (?!^(\d{1,3}\.){3}\d{1,3}$)(^[a-z0-9]([a-z0-9-]*(\.[a-z0-9])?)*$(?<!\-))
+    AllowedPattern:
+      (?!^(\d{1,3}\.){3}\d{1,3}$)(^[a-z0-9]([a-z0-9-]*(\.[a-z0-9])?)*$(?<!\-))
 
-#--- AMI for EC2 instance
-#-------------------------------------------
+  # ------------------------------------------
+  # --- AMI for EC2 instance
   PrivateAmiId:
-    Description: Private AMI ID
-    Type: AWS::EC2::Image::Id
-#-------------------------------------------
+    Description: "Private AMI ID"
+    Type: "AWS::EC2::Image::Id"
 
-#--- Public Subnet ID
-#-------------------------------------------
+  # ------------------------------------------
+  # --- Private Subnet ID
   PrivateSubnetIdA:
-    Description: Private Subnet ID AZ-A
-    Type: AWS::EC2::Subnet::Id
-#-------------------------------------------
+    Description: "Private Subnet ID AZ-A"
+    Type: "AWS::EC2::Subnet::Id"
 
-#--- Public Security Group Resource ID
-#-------------------------------------------
+  # ------------------------------------------
+  # --- Private Security Group Resource ID
   PrivateSgResourceId:
-    Description: Private Security Group ID AZ-A
-    Type: AWS::EC2::SecurityGroup::Id
-#-------------------------------------------
+    Description: "Private Security Group ID AZ-A"
+    Type: "AWS::EC2::SecurityGroup::Id"
 
 
+# ==========================================
 Conditions: {}
+# Conditions:
 
 
+# ==========================================
 Resources:
-#===========================================
+
+  # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+  #         PRIVATE EC2 DEFINITION
+  # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-# PRIVATE EC2 DEFINITION
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-
-#--- Private EC2 Instance
-#-------------------------------------------
+  # ------------------------------------------
+  # --- Private EC2 Instance
   PrivateEC2Instance:
-    Type: AWS::EC2::Instance
-#.............................
+    Type: "AWS::EC2::Instance"
+    # .............................
     CreationPolicy:
-      ResourceSignal:    
+      ResourceSignal:
         Count: 1
         Timeout: "PT10M"
-#.............................
+    # .............................
     Properties:
-#.............................
+      # .............................
       Tags:
         -
           Key: "Name"
           Value: "openvpn-private"
-#.............................
+      # .............................
       AvailabilityZone:
         'Fn::Select':
           - '0'
           - 'Fn::GetAZs':
               Ref: 'AWS::Region'
-#.............................
+      # .............................
       DisableApiTermination: false
-#      IamInstanceProfile: "dh-openvpn-server-restrictive"
       IamInstanceProfile: !Sub "${ProjectName}-instance-profile-${AWS::Region}"
       ImageId: !Ref PrivateAmiId
       InstanceType: "t2.nano"
       KeyName: !Sub "dh.ec2.ssh.admin.console_${AWS::Region}"
       Monitoring: false
-#      SubnetId:
-#        Ref: PrivateSubnetIdA
-#      SecurityGroupIds:
-#        - !Ref PrivateSgResourceId
-#.............................
-      BlockDeviceMappings: 
-      - 
-        DeviceName: "/dev/xvda"
-        Ebs: 
-          Encrypted: true
-          VolumeSize: 8
-          VolumeType: "gp2"
+      # .............................
+      BlockDeviceMappings:
+        -
+          DeviceName: "/dev/xvda"
+          Ebs:
+            Encrypted: true
+            VolumeSize: 8
+            VolumeType: "gp2"
+            DeleteOnTermination: true
+      # .............................
+      NetworkInterfaces:
+        -
+          Description: "Primary Private NIC"
           DeleteOnTermination: true
-#.............................
-      NetworkInterfaces: 
-      - 
-        Description: "Primary Private NIC"
-        DeleteOnTermination: true
-        DeviceIndex: 0
-        PrivateIpAddress: 10.0.0.10
-        SubnetId: !Ref PrivateSubnetIdA
-        GroupSet: 
-          - !Ref PrivateSgResourceId
-#.............................
+          DeviceIndex: "0"
+          PrivateIpAddress: "10.0.0.10"
+          SubnetId: !Ref PrivateSubnetIdA
+          GroupSet:
+            - !Ref PrivateSgResourceId
+      # .............................
       UserData:
         Fn::Base64:
           !Sub |
             #!/bin/bash -xe
             # Update Packages, inc. aws-cfn-bootstrap
             yum update -y
-            # Fix openssl error (easy-rsa) : random seed file 
-            export RANDFILE=/tmp/.rnd 
+            # Fix openssl error (easy-rsa) : random seed file
+            export RANDFILE=/tmp/.rnd
             # Start cfn-init
             /opt/aws/bin/cfn-init -v --configsets Step1 --stack ${AWS::StackId} --resource PrivateEC2Instance --region ${AWS::Region} || error_exit 'Failed to run cfn-init'
             # Start up the cfn-hup daemon to listen for changes to the EC2 instance metadata
             #/opt/aws/bin/cfn-hup || error_exit 'Failed to start cfn-hup'
             # All done so signal success
             /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackId} --resource PrivateEC2Instance --region ${AWS::Region}
-#.............................
+    # .............................
     Metadata:
-      Comment: Metadata description here.
-#,,,,,,,,,,,,,,
-      AWS::CloudFormation::Authentication: 
-        rolebased: 
+      Comment: "Metadata description here"
+      # .............................
+      AWS::CloudFormation::Authentication:
+        rolebased:
           type: "S3"
-          buckets: 
+          buckets:
             - !Ref ProjectName
-#          roleName: "dh-openvpn-server-restrictive"
           roleName: !Sub "${ProjectName}-iam-role-${AWS::Region}"
-#,,,,,,,,,,,,,,
+      # .............................
       AWS::CloudFormation::Init:
         configSets:
           Step1:
@@ -152,19 +149,7 @@ Resources:
             - configLogs
             - configEasyRSA
             - configOpenvpn
-
-#,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-#        configTemplate:
-#          packages: {}
-#          groups: {}
-#          users: {}
-#          sources: {}
-#          files: {}
-#          commands: {}
-#          services: {}
-#,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-
-
+        # / / / / / / / / / / / / / / /
         configMisc:
           commands:
             1_dhcpv6:
@@ -175,24 +160,25 @@ Resources:
               command: "sed -i 's/.*Storage.*/Storage=persistent/' /etc/systemd/journald.conf"
           services:
             sysvinit:
+              # .............................
               network:
                 ensureRunning: "true"
                 enabled: "true"
                 commands:
                   - "1_dhcpv6"
+              # .............................
               chronyd:
                 ensureRunning: "true"
                 enabled: "true"
                 commands:
                   - "2_timePool"
+              # .............................
               systemd-journald:
                 ensureRunning: "true"
                 enabled: "true"
                 commands:
                   - "3_persistLogs"
-
-
-#,,,,,,,,,,,,,,,,,,,,,,,,,,,,        
+        # / / / / / / / / / / / / / / /
         configRepo:
           packages:
             rpm:
@@ -202,9 +188,7 @@ Resources:
               command: "yum-config-manager --enable epel"
             1b_epel:
               command: 'sed -i "/\[epel\]/a priority=20" /etc/yum.repos.d/epel.repo'
-
-
-#,,,,,,,,,,,,,,,,,,,,,,,,,,,,        
+        # / / / / / / / / / / / / / / /
         configYum:
           packages:
             yum:
@@ -221,9 +205,7 @@ Resources:
                 enabled: "true"
                 commands:
                   - "1b_yumCron"
-
-
-#,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+        # / / / / / / / / / / / / / / /
         configHardenSsh:
           packages:
             yum:
@@ -231,13 +213,13 @@ Resources:
           sources:
             /tmp:
               !Join
-                - ""
-                - - "https://"
-                  - !Ref ProjectName
-                  - ".s3."
-                  - !Ref "AWS::Region"
-                  - ".amazonaws.com/"
-                  - "ssh/dh-openvpn-ec2-harden-ssh.sh.tar.gz"
+              - ""
+              - - "https://"
+                - !Ref ProjectName
+                - ".s3."
+                - !Ref "AWS::Region"
+                - ".amazonaws.com/"
+                - "ssh/dh-openvpn-ec2-harden-ssh.sh.tar.gz"
           files:
             "/etc/fail2ban/jail.local":
               content: |
@@ -250,8 +232,8 @@ Resources:
                 mode = aggressive
                 banaction = iptables-multiport
               mode: '000644'
-              owner: root
-              group: root
+              owner: "root"
+              group: "root"
           commands:
             fail2ban:
               cwd: "/etc/fail2ban/jail.d"
@@ -261,9 +243,11 @@ Resources:
               command: "./dh-openvpn-ec2-harden-ssh.sh"
           services:
             sysvinit:
+              # .............................
               firewalld:
                 ensureRunning: "false"
                 enabled: "false"
+              # .............................
               fail2ban: 
                 enabled: "true"
                 ensureRunning: "true"
@@ -271,14 +255,13 @@ Resources:
                   - "/etc/fail2ban/jail.local"
                 commands: 
                   - "fail2ban"
+              # .............................
               sshd:
                 enabled: "true"
                 ensureRunning: "true"
                 commands:
                   - "HardenSsh"
-
-
-#,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+        # / / / / / / / / / / / / / / /
         configIPtables:
           packages:
             yum:
@@ -286,13 +269,13 @@ Resources:
           sources:
             /tmp:
               !Join
-                - ""
-                - - "https://"
-                  - !Ref ProjectName
-                  - ".s3."
-                  - !Ref "AWS::Region"
-                  - ".amazonaws.com/"
-                  - "iptables/dh-openvpn-ec2-priv-iptables.sh.tar.gz"
+              - ""
+              - - "https://"
+                - !Ref ProjectName
+                - ".s3."
+                - !Ref "AWS::Region"
+                - ".amazonaws.com/"
+                - "iptables/dh-openvpn-ec2-priv-iptables.sh.tar.gz"
           files:
             "/etc/sysctl.d/30-dh-openvpn-iptables.conf":
               content: |
@@ -304,8 +287,8 @@ Resources:
                 net.ipv4.conf.all.rp_filter = 1
                 net.ipv4.tcp_syncookies = 1
               mode: '000644'
-              owner: root
-              group: root
+              owner: "root"
+              group: "root"
           commands:
             1_kernelParams:
               command: "sysctl -p /etc/sysctl.d/30-dh-openvpn-iptables.conf"
@@ -319,20 +302,18 @@ Resources:
                 enabled: "true"
                 commands:
                   - "2_iptRules"
-
-
-#,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+        # / / / / / / / / / / / / / / /
         configLogs:
           files:
-#---------------------------
+            # .............................
             "/etc/rsyslog.d/30-iptables.conf":
               content: |
                 :msg, startswith, "IPTlog" -/var/log/dh-openvpn-server-iptables.log
                 & stop
               mode: '000644'
-              owner: root
-              group: root
-#---------------------------
+              owner: "root"
+              group: "root"
+            # .............................
             "/etc/logrotate.d/dh-openvpn-logs":
               content: |
                 /var/log/dh-openvpn-server-*.log
@@ -353,15 +334,16 @@ Resources:
                  endscript
                 }
               mode: '000644'
-              owner: root
-              group: root
-#---------------------------
+              owner: "root"
+              group: "root"
+            # .............................
             "/etc/cron.d/dh-openvpn-logs-schedule":
               content: |
                 */30 * * * * root /sbin/logrotate /etc/logrotate.d/dh-openvpn-logs
               mode: '000644'
-              owner: root
-              group: root
+              owner: "root"
+              group: "root"
+          # .............................
           services:
             sysvinit:
               rsyslog:
@@ -369,9 +351,7 @@ Resources:
                 enabled: "true"
                 files:
                   - "/etc/rsyslog.d/30-iptables.conf"
-
-
-#,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+        # / / / / / / / / / / / / / / /
         configEasyRSA:
           packages:
             yum:
@@ -386,18 +366,18 @@ Resources:
                 set_var EASYRSA_KEY_SIZE 4096
                 set_var EASYRSA_DIGEST "sha512"
               mode: '000644'
-              owner: root
-              group: root
+              owner: "root"
+              group: "root"
           sources:
             /tmp/sign-reqs:
               !Join
-                - ""
-                - - "https://"
-                  - !Ref ProjectName
-                  - ".s3."
-                  - !Ref "AWS::Region"
-                  - ".amazonaws.com/"
-                  - "easy-rsa/sign-reqs/dh-openvpn-easyrsa-sign-reqs.tar.gz"
+              - ""
+              - - "https://"
+                - !Ref ProjectName
+                - ".s3."
+                - !Ref "AWS::Region"
+                - ".amazonaws.com/"
+                - "easy-rsa/sign-reqs/dh-openvpn-easyrsa-sign-reqs.tar.gz"
           commands:
             1a_initPKI:
               command: "mkdir -p /usr/local/easy-rsa && cp -r /usr/share/easy-rsa/3/* $_"
@@ -427,18 +407,16 @@ Resources:
               command: "rm -f pki-cert-auth.txt"
             4c_signReqs:
               cwd: "/usr/local/easy-rsa/pki/issued"
-              command: 
+              command:
                 !Sub "tar -czf - ca.crt *server.crt | aws s3 cp - s3://${ProjectName}/openvpn/server/crt/dh-openvpn-server-crt.tar.gz"
             4d_signReqs:
               cwd: "/usr/local/easy-rsa/pki/issued"
-              command: 
+              command:
                 !Sub "tar -czf - ca.crt *client.crt | aws s3 cp - s3://${ProjectName}/openvpn/client/crt/dh-openvpn-client-crt.tar.gz"
-
-
-#,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+        # / / / / / / / / / / / / / / /
         configOpenvpn:
           commands:
-            1_cmd: 
+            1_cmd:
               cwd: "/tmp"
               command: "mkdir openvpn-client-files"
             2_cmd:
@@ -447,32 +425,14 @@ Resources:
             3_cmd:
               cwd: "/tmp/openvpn-client-files"
               command: "cp /usr/local/easy-rsa/pki/issued/*client.crt ."
-#            4_cmd:
-#              cwd: "/tmp/openvpn-client-files"
-#              command: 
-#                !Sub 'aws s3 sync s3://${ProjectName}/openvpn/client/key/ . --exclude "*" --include "*.key"'
-#            5_cmd:
-#              cwd: "/tmp/openvpn-client-files"
-#              command: 
-#                !Sub "tar -czf - * | aws s3 cp - s3://${ProjectName}/openvpn/client/openvpn-client-files.tar.gz"
 
 
-#,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-
-
-#-------------------------------------------
-
-
-
-#Outputs: {}
+# ==========================================
+# Outputs: {}
 Outputs:
-#===========================================
 
-
-#--- Private Instance ID
-#-------------------------------------------
+  # ------------------------------------------
+  # --- Private Instance ID
   PrivEC2InstanceId:
-    Description: Stack1 Private Instance ID
-    Value:
-      Ref: PrivateEC2Instance
-#-------------------------------------------
+    Description: "PKI Cert Auth Private Instance ID"
+    Value: !Ref PrivateEC2Instance
