--- a/cfn-templates/dh-openvpn-cfn_ec2-tg.yaml
+++ b/cfn-templates/dh-openvpn-cfn_ec2-tg.yaml
@@ -1,63 +1,64 @@
+---
 AWSTemplateFormatVersion: '2010-09-09'
 Description: >
   Target Group for OpenVPN Implementation.
-  A Nested Stack that comprises: 
+  A Nested Stack that comprises:
   Bla Bla.
   Inputs include:
   Bla Bla.
   Outputs include:
   Bla Bla.
-#-------------------------------------------
+# ------------------------------------------
 
 
+# ==========================================
 Metadata: {}
+# Metadata:
 
 
-#Parameters: {}
+# ==========================================
+# Parameters {}
 Parameters:
-#===========================================
 
-#--- The Project Name
-#-------------------------------------------
+  # ------------------------------------------
+  # --- The Project Name
   ProjectName:
-    Description: Name of this Openvpn project.
-    ConstraintDescription: Specify name of the project.
+    Description: "Name of this Openvpn project"
+    ConstraintDescription: "Specify name of the project"
     Type: String
     Default: "dh-openvpn"
     MinLength: 3
     MaxLength: 63
-    AllowedPattern: (?!^(\d{1,3}\.){3}\d{1,3}$)(^[a-z0-9]([a-z0-9-]*(\.[a-z0-9])?)*$(?<!\-))
+    AllowedPattern:
+      (?!^(\d{1,3}\.){3}\d{1,3}$)(^[a-z0-9]([a-z0-9-]*(\.[a-z0-9])?)*$(?<!\-))
 
-#-------------------------------------------
-#--- AWS-Specific Parameter Type
-#-------------------------------------------
+  # ------------------------------------------
+  # --- AWS-Specific Parameter VPC Id
   VPCID:
-    Description: VPC to associate with load balancer 
-    Type: AWS::EC2::VPC::Id
-#-------------------------------------------
+    Description: "VPC to associate with load balancer"
+    Type: "AWS::EC2::VPC::Id"
 
 
+# ==========================================
 Conditions: {}
+# Conditions:
 
 
+# ==========================================
 Resources:
-#===========================================
+
+  # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+  #     NETWORK LOAD BALANCER DEFINITIONS
+  # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-# NETWORK LOAD BALANCER DEFINITIONS
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-
-#--- Target Group Definition
-#-------------------------------------------
+  # ------------------------------------------
+  # --- Target Group Definition
   OpenvpnTargetGroup:
     Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
-#.............................
+    # .............................
     Properties:
-#.............................
       Name: !Sub "${ProjectName}-target-group"
-#.............................
       HealthCheckEnabled: true
       HealthCheckIntervalSeconds: 30
       HealthCheckPort: "80"
@@ -65,48 +66,37 @@ Resources:
       HealthCheckTimeoutSeconds: 10
       HealthyThresholdCount: 3
       UnhealthyThresholdCount: 3
-#.............................
       VpcId: !Ref VPCID
       TargetType: "instance"
       Port: 1194
       Protocol: "TCP_UDP"
-#.............................
-#      Targets:
-#        - 
-#          Id: !Ref PublicEC2InstanceId
-#          Port: 1194
-#.............................
-      TargetGroupAttributes: 
-      - 
-        Key: "proxy_protocol_v2.enabled"
-        Value: "false"
-      - 
-        Key: "deregistration_delay.timeout_seconds"
-        Value: "240"
-#.............................
+      # .............................
+      TargetGroupAttributes:
+        -
+          Key: "proxy_protocol_v2.enabled"
+          Value: "false"
+        -
+          Key: "deregistration_delay.timeout_seconds"
+          Value: "240"
+      # .............................
       Tags:
-        - 
+        -
           Key: "Name"
           Value: "OpenvpnTargetGroup"
-#,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 
 
-#-------------------------------------------
-
-
-
-#Outputs: {}
+# ==========================================
+# Outputs: {}
 Outputs:
-#===========================================
 
-
-#--- EC2 Target Group ARN
-#-------------------------------------------
+  # ------------------------------------------
+  # --- EC2 Target Group ARN
   OpenvpnTargetGroupARN:
-    Description: Network Loadbalancer Target Group ARN
+    Description: "Network Loadbalancer Target Group ARN"
     Value: !Ref OpenvpnTargetGroup
-#-------------------------------------------
+
+  # ------------------------------------------
+  # --- EC2 Target Group Name
   OpenvpnTargetName:
-    Description: Network Loadbalancer Target Group Name
+    Description: "Network Loadbalancer Target Group Name"
     Value: !GetAtt OpenvpnTargetGroup.TargetGroupName
-#-------------------------------------------
