--- a/cfn-templates/dh-openvpn-cfn_vpc.yaml
+++ b/cfn-templates/dh-openvpn-cfn_vpc.yaml
@@ -1,6 +1,7 @@
+---
 AWSTemplateFormatVersion: '2010-09-09'
 Description: >
-  A Nested Stack that comprises: 
+  A Nested Stack that comprises:
   VPC Top Level Definition.
   Multi-AZ Private & Public Subnet Definitions.
   Internet Gateway Definition.
@@ -13,341 +14,332 @@ Description: >
   VPC ID
   Private Subnet IDs
   Public Subnet IDs
-#-------------------------------------------
-#--- CIDR Strings
-#-------------------------------------------
+# ------------------------------------------
+# --- CIDR Strings
+# ------------------------------------------
 # Public Subnet A CIDR : 10.0.128.0/20
 # Public Subnet B CIDR : 10.0.144.0/20
-#-------------------------------------------
+# ------------------------------------------
 # Public Subnet A CIDR : 10.0.0.0/19
 # Public Subnet B CIDR : 10.0.32.0/19
-#-------------------------------------------
+# ------------------------------------------
 
 
+# ==========================================
 Metadata: {}
+# Metadata:
 
 
+# ==========================================
+# Parameters {}
 Parameters:
-#===========================================
 
-#--- Stack Build Stage Indicator
-#-------------------------------------------
-  BuildStep: 
-    Description: Specify the Stage of the Build.
+  # ------------------------------------------
+  # --- The Project Name
+  ProjectName:
+    Description: "Name of this Openvpn project"
+    ConstraintDescription: "Specify name of the project"
+    Type: String
+    Default: "dh-openvpn"
+    MinLength: 3
+    MaxLength: 63
+    AllowedPattern:
+      (?!^(\d{1,3}\.){3}\d{1,3}$)(^[a-z0-9]([a-z0-9-]*(\.[a-z0-9])?)*$(?<!\-))
+
+  # ------------------------------------------
+  # --- Stack Build Stage Indicator
+  BuildStep:
+    Description: "Specify the Stage of the Build"
     Type: String
     Default: "Stage1"
 
 
-
-#Conditions: {}
+# ==========================================
+# Conditions: {}
 Conditions:
-#===========================================
-  CreateResourcesStage1: !Equals [ !Ref BuildStep, Stage1]
-  CreateResourcesStage2: !Equals [ !Ref BuildStep, Stage2]
+  # CreateResourcesStage1: !Equals [ !Ref BuildStep, "Stage1"]
+  CreateResourcesStage2: !Equals [!Ref BuildStep, "Stage2"]
+  # CreateResourcesStage3: !Equals [!Ref BuildStep, "Stage3"]
 
 
+# ==========================================
 Resources:
-#===========================================
 
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-# TOP LEVEL CIDR DEFINITION
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+  # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+  #         TOP LEVEL CIDR DEFINITION
+  # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 
-#--- VPC Definition
-#-------------------------------------------
+  # ------------------------------------------
+  # --- VPC Definition
   VPC:
-    Type: 'AWS::EC2::VPC'
+    Type: "AWS::EC2::VPC"
+    # .............................
     Properties:
       CidrBlock: "10.0.0.0/16"
       EnableDnsHostnames: true
       EnableDnsSupport: true
       Tags:
-        - Key: Name
-          Value: 
-            !Sub ${AWS::StackName}-VPC
-#-------------------------------------------
+        - Key: "Name"
+          Value:
+            !Sub "${ProjectName}-VPC"
 
 
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-# SUBNET DEFINITIONS
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+  # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+  #         SUBNET DEFINITIONS
+  # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-
-#--- AZ-A Public Subnet
-#-------------------------------------------
+  # ------------------------------------------
+  # --- AZ-A Public Subnet
   PublicSubnetA:
-    Type: 'AWS::EC2::Subnet'
+    Type: "AWS::EC2::Subnet"
+    # .............................
     Properties:
       CidrBlock: "10.0.128.0/20"
       MapPublicIpOnLaunch: true
-      VpcId:
-        Ref: VPC
+      VpcId: !Ref VPC
       AvailabilityZone:
         'Fn::Select':
           - '0'
           - 'Fn::GetAZs':
               Ref: 'AWS::Region'
       Tags:
-        - Key: Name
-          Value: 
-            !Sub ${AWS::StackName}-PubSubnetA
+        - Key: "Name"
+          Value:
+            !Sub "${ProjectName}-PubSubnetA"
 
-#--- AZ-B Public Subnet
-#-------------------------------------------
+  # ------------------------------------------
+  # --- AZ-B Public Subnet
   PublicSubnetB:
-    Type: 'AWS::EC2::Subnet'
+    Type: "AWS::EC2::Subnet"
+    # .............................
     Properties:
       CidrBlock: "10.0.144.0/20"
       MapPublicIpOnLaunch: true
-      VpcId:
-        Ref: VPC
+      VpcId: !Ref VPC
       AvailabilityZone:
         'Fn::Select':
           - '1'
           - 'Fn::GetAZs':
               Ref: 'AWS::Region'
       Tags:
-        - Key: Name
-          Value: 
-            !Sub ${AWS::StackName}-PubSubnetB
+        - Key: "Name"
+          Value:
+            !Sub "${ProjectName}-PubSubnetB"
 
-#--- AZ1 Private Subnet
-#-------------------------------------------
+  # ------------------------------------------
+  # --- AZ1 Private Subnet
   PrivateSubnetA:
-    Type: 'AWS::EC2::Subnet'
+    Type: "AWS::EC2::Subnet"
+    # .............................
     Properties:
       CidrBlock: "10.0.0.0/19"
       MapPublicIpOnLaunch: false
-      VpcId:
-        Ref: VPC
+      VpcId: !Ref VPC
       AvailabilityZone:
         'Fn::Select':
           - '0'
           - 'Fn::GetAZs':
               Ref: 'AWS::Region'
       Tags:
-        - Key: Name
-          Value: 
-            !Sub ${AWS::StackName}-PrivSubnetA
+        - Key: "Name"
+          Value:
+            !Sub "${ProjectName}-PrivSubnetA"
 
-#--- AZ-B Private Subnet
-#-------------------------------------------
+  # ------------------------------------------
+  # --- AZ-B Private Subnet
   PrivateSubnetB:
-    Type: 'AWS::EC2::Subnet'
+    Type: "AWS::EC2::Subnet"
+    # .............................
     Properties:
       CidrBlock: "10.0.32.0/19"
       MapPublicIpOnLaunch: false
-      VpcId:
-        Ref: VPC
+      VpcId: !Ref VPC
       AvailabilityZone:
         'Fn::Select':
           - '1'
           - 'Fn::GetAZs':
               Ref: 'AWS::Region'
       Tags:
-        - Key: Name
-          Value: 
-            !Sub ${AWS::StackName}-PrivSubnetB
-#-------------------------------------------
+        - Key: "Name"
+          Value:
+            !Sub "${ProjectName}-PrivSubnetB"
 
 
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-# ROUTE TABLE DEFINITIONS
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+  # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+  #         ROUTE TABLE DEFINITIONS
+  # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-
-#--- Public Route Table
-#-------------------------------------------
+  # ------------------------------------------
+  # --- Public Route Table
   RouteTablePublic:
-    Type: 'AWS::EC2::RouteTable'
+    Type: "AWS::EC2::RouteTable"
+    # .............................
     Properties:
-      VpcId:
-        Ref: VPC
+      VpcId: !Ref VPC
       Tags:
-        - Key: Name
-          Value: 
-            !Sub ${AWS::StackName}-PubRoute
-#-------------------------------------------
+        - Key: "Name"
+          Value:
+            !Sub "${ProjectName}-PubRoute"
+
+  # ------------------------------------------
   RouteTablePublicAssociationA:
-    Type: 'AWS::EC2::SubnetRouteTableAssociation'
+    Type: "AWS::EC2::SubnetRouteTableAssociation"
+    # .............................
     Properties:
-      RouteTableId:
-        Ref: RouteTablePublic
-      SubnetId:
-        Ref: PublicSubnetA
-#-------------------------------------------
+      RouteTableId: !Ref RouteTablePublic
+      SubnetId: !Ref PublicSubnetA
+
+  # ------------------------------------------
   RouteTablePublicAssociationB:
-    Type: 'AWS::EC2::SubnetRouteTableAssociation'
+    Type: "AWS::EC2::SubnetRouteTableAssociation"
+    # .............................
     Properties:
-      RouteTableId:
-        Ref: RouteTablePublic
-      SubnetId:
-        Ref: PublicSubnetB
-#-------------------------------------------
+      RouteTableId: !Ref RouteTablePublic
+      SubnetId: !Ref PublicSubnetB
+
+  # ------------------------------------------
   RouteTablePublicRoute0:
-    Type: 'AWS::EC2::Route'
+    Type: "AWS::EC2::Route"
+    # .............................
     Properties:
-      DestinationCidrBlock: 0.0.0.0/0
-      RouteTableId:
-        Ref: RouteTablePublic
-      GatewayId:
-        Ref: Igw
-#-------------------------------------------
+      DestinationCidrBlock: "0.0.0.0/0"
+      RouteTableId: !Ref RouteTablePublic
+      GatewayId: !Ref Igw
 
-#--- Private A Route Table
-#-------------------------------------------
+  # ------------------------------------------
+  # --- Private A Route Table
   RouteTablePrivateA:
-    Type: 'AWS::EC2::RouteTable'
+    Type: "AWS::EC2::RouteTable"
+    # .............................
     Properties:
-      VpcId:
-        Ref: VPC
+      VpcId: !Ref VPC
       Tags:
-        - Key: Name
-          Value: 
-            !Sub ${AWS::StackName}-PrivRouteA
-#-------------------------------------------
+        - Key: "Name"
+          Value:
+            !Sub "${ProjectName}-PrivRouteA"
+
+  # ------------------------------------------
   RouteTablePrivateAAssociation1:
-    Type: 'AWS::EC2::SubnetRouteTableAssociation'
+    Type: "AWS::EC2::SubnetRouteTableAssociation"
+    # .............................
     Properties:
-      RouteTableId:
-        Ref: RouteTablePrivateA
-      SubnetId:
-        Ref: PrivateSubnetA
-#-------------------------------------------
+      RouteTableId: !Ref RouteTablePrivateA
+      SubnetId: !Ref PrivateSubnetA
+
+  # ------------------------------------------
   RouteTablePrivateARoute0:
-    Type: 'AWS::EC2::Route'
+    Type: "AWS::EC2::Route"
     Condition: CreateResourcesStage2
+    # .............................
     Properties:
-      DestinationCidrBlock: 0.0.0.0/0
-      RouteTableId:
-        Ref: RouteTablePrivateA
-      NatGatewayId:
-        Ref: NatGw1
-#-------------------------------------------
+      DestinationCidrBlock: "0.0.0.0/0"
+      RouteTableId: !Ref RouteTablePrivateA
+      NatGatewayId: !Ref NatGw1
 
-#--- Private B Route Table
-#-------------------------------------------
+  # ------------------------------------------
+  # --- Private B Route Table
   RouteTablePrivateB:
-    Type: 'AWS::EC2::RouteTable'
+    Type: "AWS::EC2::RouteTable"
+    # .............................
     Properties:
-      VpcId:
-        Ref: VPC
+      VpcId: !Ref VPC
       Tags:
-        - Key: Name
-          Value: 
-            !Sub ${AWS::StackName}-PrivRouteB
-#-------------------------------------------
+        - Key: "Name"
+          Value:
+            !Sub "${ProjectName}-PrivRouteB"
+  # ------------------------------------------
   RouteTablePrivateBAssociation1:
-    Type: 'AWS::EC2::SubnetRouteTableAssociation'
+    Type: "AWS::EC2::SubnetRouteTableAssociation"
+    # .............................
     Properties:
-      RouteTableId:
-        Ref: RouteTablePrivateB
-      SubnetId:
-        Ref: PrivateSubnetB
-#-------------------------------------------
+      RouteTableId: !Ref RouteTablePrivateB
+      SubnetId: !Ref PrivateSubnetB
+
+  # ------------------------------------------
   RouteTablePrivateBRoute0:
-    Type: 'AWS::EC2::Route'
+    Type: "AWS::EC2::Route"
     Condition: CreateResourcesStage2
+    # .............................
     Properties:
-      DestinationCidrBlock: 0.0.0.0/0
-      RouteTableId:
-        Ref: RouteTablePrivateB
-      NatGatewayId:
-        Ref: NatGw1
-#-------------------------------------------
+      DestinationCidrBlock: "0.0.0.0/0"
+      RouteTableId: !Ref RouteTablePrivateB
+      NatGatewayId: !Ref NatGw1
 
 
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-# GATEWAY DEFINITIONS
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+  # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+  #         GATEWAY DEFINITIONS
+  # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-
-#--- Internet Gateway
-#-------------------------------------------
+  # ------------------------------------------
+  # --- Internet Gateway
   Igw:
-    Type: 'AWS::EC2::InternetGateway'
+    Type: "AWS::EC2::InternetGateway"
+    # .............................
     Properties: {}
-#-------------------------------------------
+
+  # ------------------------------------------
+  # --- Internet Gateway Attachment
   IGWAttachment:
-    Type: 'AWS::EC2::VPCGatewayAttachment'
+    Type: "AWS::EC2::VPCGatewayAttachment"
+    # .............................
     Properties:
-      VpcId:
-        Ref: VPC
-      InternetGatewayId:
-        Ref: Igw
-#-------------------------------------------
+      VpcId: !Ref VPC
+      InternetGatewayId: !Ref Igw
 
-
-#--- NAT Gateway
-#-------------------------------------------
+  # ------------------------------------------
+  # --- NAT Gateway IP address
   NatGw1ElasticIP:
-    Type: 'AWS::EC2::EIP'
+    Type: "AWS::EC2::EIP"
     Condition: CreateResourcesStage2
+    # .............................
     Properties:
       Domain: vpc
-#-------------------------------------------
+
+  # ------------------------------------------
+  # --- NAT Gateway
   NatGw1:
-    Type: 'AWS::EC2::NatGateway'
+    Type: "AWS::EC2::NatGateway"
     Condition: CreateResourcesStage2
+    # .............................
     Properties:
-      SubnetId:
-        Ref: PublicSubnetA
+      SubnetId: !Ref PublicSubnetA
       AllocationId:
         'Fn::GetAtt':
           - NatGw1ElasticIP
           - AllocationId
-#-------------------------------------------
 
 
-#Outputs: {}
+# ==========================================
+# Outputs: {}
 Outputs:
-#===========================================
 
-
-#---Top Level VPCID Export
-#-------------------------------------------
+  # ------------------------------------------
+  # ---Top Level VPCID Export
   VPCID:
-    Description: VPC ID
-    Value:
-      Ref: VPC
-#    Export:
-#      Name:
-#        Fn::Sub: ${AWS::StackName}-VPCID
-#---Public Subnet AZ-A Export
-#-------------------------------------------
+    Description: "VPC ID"
+    Value: !Ref VPC
+
+  # ------------------------------------------
+  # ---Public Subnet AZ-A Export
   PublicSubnetIdA:
-    Description: Public Subnet ID AZ-A
-    Value:
-      Ref: PublicSubnetA
-#    Export:
-#      Name: 
-#        Fn::Sub: ${AWS::StackName}-PublicSubnetIdA
-#---Public Subnet AZ-B Export
-#-------------------------------------------
+    Description: "Public Subnet ID AZ-A"
+    Value: !Ref PublicSubnetA
+
+  # ------------------------------------------
+  # ---Public Subnet AZ-B Export
   PublicSubnetIdB:
-    Description: Public Subnet ID AZ-B
-    Value:
-      Ref: PublicSubnetB
-#    Export:
-#      Name: 
-#        Fn::Sub: ${AWS::StackName}-PublicSubnetIdB
-#---Private Subnet AZ-A Export
-#-------------------------------------------
+    Description: "Public Subnet ID AZ-B"
+    Value: !Ref PublicSubnetB
+
+  # ------------------------------------------
+  # ---Private Subnet AZ-A Export
   PrivateSubnetIdA:
-    Description: Private Subnet ID AZ-A
-    Value:
-      Ref: PrivateSubnetA
-#    Export:
-#      Name: 
-#        Fn::Sub: ${AWS::StackName}-PrivateSubnetIdA
-#---Private Subnet AZ-B Export
-#-------------------------------------------
+    Description: "Private Subnet ID AZ-A"
+    Value: !Ref PrivateSubnetA
+
+  # ------------------------------------------
+  # ---Private Subnet AZ-B Export
   PrivateSubnetIdB:
-    Description: Private Subnet ID AZ-B
-    Value:
-      Ref: PrivateSubnetB
-#    Export:
-#      Name: 
-#        Fn::Sub: ${AWS::StackName}-PrivateSubnetIdB
-#-------------------------------------------
+    Description: "Private Subnet ID AZ-B"
+    Value: !Ref PrivateSubnetB
